--- a/user_interface/pubspec.yaml
+++ b/user_interface/pubspec.yaml
@@ -61,6 +61,15 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/samurai.png
+    - images/Grand Blue.jpeg
+    - images/black butler.jpeg
+    - images/one punchman.jpeg
+    - images/Demon Slayer_ Kimetsu no Yaiba.jpeg
+    - images/mob psycho100.jpeg
+    - images/Jujutsu Kaisen Oficial Poster.jpeg
+    - images/Oshi no Ko poster.jpeg
+    - images/totoro.jpeg
+    - images/Howl's Moving Castle Poster.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
